end Liczby i obliczenia

--- a/matematyka/lekcji/Liczby i obliczenia/indexLiczby.html
+++ b/matematyka/lekcji/Liczby i obliczenia/indexLiczby.html
@@ -33,12 +33,12 @@
                <Li><a href="./lekcji/lekcja05.html">- Znaki rzymskie XIII-XXXIX</a></Li>
                <Li><a href="./lekcji/lekcja06.html">- Porządkowanie w szeregu</a></Li>
                <Li><a href="./lekcji/lekcja07.html">- Porównywanie różnicowe</a></Li>
-               <li><a href="">- Porównywanie ilorazowe</a></li>
-               <li><a href="">- Porównywanie sum, różnic, iloczynów i ilorazów</a></li>
-               <li><a href="">- Piramidy liczbowe</a></li>
-               <li><a href="">- Kolejność działań</a></li>
-               <li><a href="">- Kwadraty magiczne do 100</a></li>
-               <li><a href="">- Oś liczbowa</a></li>
+               <li><a href="./lekcji/lekcja08.html">- Porównywanie ilorazowe</a></li>
+               <li><a href="./lekcji/lekcja09.html">- Porównywanie sum, różnic, iloczynów i ilorazów</a></li>
+               <li><a href="./lekcji/lekcja10.html">- Piramidy liczbowe</a></li>
+               <li><a href="./lekcji/lekcja11.html">- Kolejność działań</a></li>
+               <li><a href="./lekcji/lekcja12.html">- Kwadraty magiczne do 100</a></li>
+               <li><a href="./lekcji/lekcja13.html">- Oś liczbowa</a></li>
             </ul>
             
         </div>
