--- a/przyroda/lekcji/Świat zwierząt/indexSwiatZwierząt.html
+++ b/przyroda/lekcji/Świat zwierząt/indexSwiatZwierząt.html
@@ -25,17 +25,40 @@
         </h6>
         <h2>Świat zwierząt</h2>
         <div>
-            <ul >
-               <li><a href="">- Budowa zwierząt</a></li>
-               <li><a href="">- Odżywianie zwierząt</a></li>
-               <li><a href="">- Zwierzęta i ich środowisko</a></li>
-               <li><a href="">- Język zwierząt</a></li>
-               <li><a href="">- Rozwój zwierząt</a></li>
-               <li><a href="">- Zwierzęta leśne</a></li>
-               <li><a href="">- Zwierzęta hodowlane</a></li>
-               <li><a href="">- Mali pomocnicy</a></li>
-            </ul>
-            
+             <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img src="./image/img4.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img src="./image/img5.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja06.html" class="zagolowok"><img src="./image/img6.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja07.html" class="zagolowok"><img src="./image/img7.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja08.html" class="zagolowok"><img src="./image/img8.png"
+                            alt=""></a>
+                </div>
+            </ul>            
         </div>
     </main>
 </body>
