--- a/przyroda/lekcji/Świat zwierząt/indexSwiatZwierząt.html
+++ b/przyroda/lekcji/Świat zwierząt/indexSwiatZwierząt.html
@@ -47,15 +47,15 @@
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcja06.html" class="zagolowok"><img src="./image/img6.png"
+                    <a href="./lekcja/lekcja06.html" class="zagolowok"><img src="./image/img6.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcja07.html" class="zagolowok"><img src="./image/img7.png"
+                    <a href="./lekcja/lekcja07.html" class="zagolowok"><img src="./image/img7.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcja08.html" class="zagolowok"><img src="./image/img8.png"
+                    <a href="./lekcja/lekcja08.html" class="zagolowok"><img src="./image/img8.png"
                             alt=""></a>
                 </div>
             </ul>            
