--- a/przyroda/lekcji/Swiat roślin/indexSwiatRoslin.html
+++ b/przyroda/lekcji/Swiat roślin/indexSwiatRoslin.html
@@ -25,20 +25,60 @@
         </h6>
         <h2>Swiat roślin</h2>
         <div>
-            <ul >
-               <li><a href="">- Rośliny i ich środowisko</a></li>
-               <li><a href="">- Drzewa, krzewy i rośliny zielne</a></li>
-               <li><a href="">- Las i dary lasu</a></li>
-               <li><a href="">- Grzyby i rośliny trujące</a></li>
-               <li><a href="">- Rośliny uprawne</a></li>
-               <li><a href="">- Rośliny zbożowe</a></li>
-               <li><a href="">- Wykorzystanie zbóż</a></li>
-               <li><a href="">- Rośliny okopowe</a></li>
-               <li><a href="">- Rośliny włókniste i oleiste</a></li>
-               <li><a href="">- Przyprawy i zioła</a></li>
-            </ul>
-            
-            
+             <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img src="./image/img4.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img src="./image/img5.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja06.html" class="zagolowok"><img src="./image/img6.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja07.html" class="zagolowok"><img src="./image/img7.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja08.html" class="zagolowok"><img src="./image/img8.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja09.html" class="zagolowok"><img src="./image/img9.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja10.html" class="zagolowok"><img src="./image/img10.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja11.html" class="zagolowok"><img src="./image/img11.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja12.html" class="zagolowok"><img src="./image/img12.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja13.html" class="zagolowok"><img src="./image/img13.png"
+                            alt=""></a>
+                </div>
+            </ul>            
         </div>
     </main>
 </body>
