--- a/przyroda/lekcji/Swiat roślin/lekcja/lekcja01.html
+++ b/przyroda/lekcji/Swiat roślin/lekcja/lekcja01.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Świat zwierząt / Mali pomocnicy</title>
+    <title>Swiat roślin / Rośliny i ich środowisko</title>
     <link rel="stylesheet" href="../../../../style.css">
     <link rel="stylesheet" href="../../../../styleText.css">
 </head>
@@ -23,42 +23,65 @@
     </header>
     <main class="wraper">
         <h6>
-            <a href="../../indexPrzyroda.html"> Przyroda > </a> <a href="../indexSwiatZwierząt.html">Świat zwierząt
+            <a href="../../indexPrzyroda.html"> Przyroda > </a> <a href="../indexSwiatRoslin.html">Swiat roślin
                 ></a>
-            <a href="#">Mali pomocnicy</a>
+            <a href="#">Rośliny i ich środowisko</a>
         </h6>
-        <h2>Świat zwierząt</h2>
-        <h3>🐜 Mali pomocnicy</h3>
-        <p class="p" style="text-align: center;"><em>(Маленькие помощники в природе)</em></p>
+        <h2>Swiat roślin </h2>
+        <h3>🌱 Rośliny i ich środowisko</h3>
+        <p class="p" style="text-align: center;"><em>(Растения и их среда обитания)</em></p>
 
         <div>
             <div class="centr">
-                <h6>🌍 1. Кто такие „маленькие помощники”?</h6>
-                <p>Это <b>маленькие животные и насекомые</b>, которые <b>помогают природе, растениям и даже людям</b>.</p>
-                <p>Хотя они крошечные, <b>их работа очень важна</b>!</p>
-                
+                <h6>🟢 1. Co to są rośliny?</h6>
+                <p><b>Что такое растения?</b></p>
+                <p><b>Rośliny</b> – это живые организмы, которые <b>растут в ziemi (почве), potrzebują światła
+                        (нуждаются в свете), wody (воде) и powietrza (воздухе)</b>.</p>
             </div>
-            <div class="image" style="width: 80%;">
-                <img src="../image/img12.png" alt="">
+            <div>
+                <h6>🌍 2. Co to jest środowisko?</h6>
+                <p class="centr"><b>Что такое среда обитания?</b></p>
+                <p><b>Środowisko</b> – это место, где растение живёт:
+                    → <b>gleba</b> (почва), <b>woda</b> (вода), <b>światło</b> (свет), <b>cień</b> (тень),
+                    <b>temperatura</b> (температура).
+
+                </p>
+            </div>
+            <div class="image" style="width: 84%;">
+                <img src="../image/img14.png" alt="">
             </div>
             <!--  -->
-            <div class="centr">
-               <h6>🌺 3. Почему они важны?</h6>
-                <ul class="centr">
-                    <li><b>🐝  Pszczoły</b> опыляют цветы → без них не будет фруктов!</li>
-                    <li><b>🪱 Dżdżownice</b> улучшают почву → растения лучше растут.</li>
-                    <li><b>🐞 Biedronki</b> защищают растения от вредителей.</li>
-                    <li><b>🐜 Mrówki и 🕷️ pająki</b> убирают остатки пищи и других насекомых.</li>
-                </ul>
+            <div class="two">
+                <div>
+                    <h6>🌿 4. Co potrzebują rośliny do życia?</h6>
+                    <p class="centr"><b>Что нужно растениям для жизни?</b></p>
+                    <ul>
+                        <li><b>☀️ światło słoneczne</b> – солнечный свет</li>
+                        <li><b>💧 woda</b> – вода</li>
+                        <li><b>🌬️ powietrze</b> – воздух</li>
+                        <li><b>🌱 żyzna gleba</b> – плодородная почва</li>
+                        <li><b>🌡️ ciepło</b> – тепло</li>
+                    </ul>
+                </div>
+                <div>
+                    <h6>🍏 5. Dlaczego rośliny są ważne?</h6>
+                    <p class="centr"><b>Почему растения важны?</b></p>
+                    <ul>
+                        <li>Produkują <b>tlen (кислород)</b></li>
+                        <li>Dają <b>pożywienie (еду)</b></li>
+                        <li>Są domem dla zwierząt</li>
+                        <li>Chronią ziemię przed wysychaniem</li>
+                    </ul>
+                </div>
             </div>
         </div>
-        
+
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/n57q5E6q0-U?si=2FHHm9SZRTEIRNmg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe style="max-width:100%" src="https://wordwall.net/ru/embed/bd13fc15926d4371b9a5ecb6d7ffcc70?themeId=49&templateId=38&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
         </div>
 
-        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/przyroda/swiat-zwierzat/mali-pomocnicy/"
-                target="_blank">Mali pomocnicy ćwieczenie >></a></h4>
+        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/przyroda/swiat-roslin/rosliny-i-ich-srodowisko/"
+                target="_blank">Rośliny i ich środowisko ćwieczenie >></a></h4>
     </main>
 </body>
 
