--- a/przyroda/lekcji/Człowiek/indexCzlowiek.html
+++ b/przyroda/lekcji/Człowiek/indexCzlowiek.html
@@ -25,15 +25,32 @@
         </h6>
         <h2>Człowiek</h2>
         <div>
-            <ul >
-               <li><a href="">- Budowa wewnętrzna człowieka</a></li>
-               <li><a href="">- Części ciała</a></li>
-               <li><a href="">- Zmysły</a></li>
-               <li><a href="">- Zdrowe odżywianie</a></li>
-               <li><a href="">- Zdrowie</a></li>
-               <li><a href="">- Etapy życia człowieka</a></li>
-            </ul>
-            
+             <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img src="./image/img4.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img src="./image/img5.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja06.html" class="zagolowok"><img src="./image/img6.png"
+                            alt=""></a>
+                </div>
+            </ul>            
         </div>
     </main>
 </body>
