--- a/przyroda/lekcji/ Ekologia/indexEkologia.html
+++ b/przyroda/lekcji/ Ekologia/indexEkologia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Ekologia</title>
+    <title>Ekologia</title>
     <link rel="stylesheet" href="../../../style.css">
     <link rel="stylesheet" href="../../../styleText.css">
 </head>
@@ -21,25 +21,24 @@
     </header>
     <main class="wrapper">
         <h6>
-               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="#"> Ekologia</a>
+               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="#">Ekologia</a>
         </h6>
-        <h2> Ekologia</h2>
+        <h2>Ekologia</h2>
         <div>
-            <ul class="ulHome">
+             <ul class="ulHome">
                 <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img1.png"
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
                             src="./image/img2.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
                             src="./image/img3.png" alt=""></a>
                 </div>
-            </ul>
-            
+            </ul>            
         </div>
     </main>
 </body>
