--- a/przyroda/lekcji/Przyroda nieożywiona/indexPrzyrodaNieozywiona.html
+++ b/przyroda/lekcji/Przyroda nieożywiona/indexPrzyrodaNieozywiona.html
@@ -25,47 +25,40 @@
         </h6>
         <h2>Przyroda nieożywiona</h2>
         <div>
-            <ul class="ulHome">
+             <ul class="ulHome">
                 <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img1.png"
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
                             src="./image/img2.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
                             src="./image/img3.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img
                             src="./image/img4.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img
                             src="./image/img5.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja06.html" class="zagolowok"><img
                             src="./image/img6.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja07.html" class="zagolowok"><img
                             src="./image/img7.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja08.html" class="zagolowok"><img
                             src="./image/img8.png" alt=""></a>
                 </div>
-            </ul>
-            <div class="video">
-                <iframe title="vimeo-player" src="https://player.vimeo.com/video/288375091?h=5b2dd9a2f6" width="640" height="360" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"   allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe title="vimeo-player" src="https://player.vimeo.com/video/288381080?h=5613f2de07" width="640" height="360" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"   allowfullscreen></iframe>
-            </div>
-            
+            </ul>            
         </div>
     </main>
 </body>
