--- a/przyroda/lekcji/Przyroda nieożywiona/lekcja/lekcja02.html
+++ b/przyroda/lekcji/Przyroda nieożywiona/lekcja/lekcja02.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niezbędne do życia</title>
+    <title>Woda i jej właściwości</title>
     <link rel="stylesheet" href="../../../../style.css">
     <link rel="stylesheet" href="../../../../styleText.css">
     <link rel="stylesheet" href="../../../../styleTable.css">
@@ -25,88 +25,108 @@
         <h6>
             <a href="../../../indexPrzyroda.html">Przyroda ></a>
             <a href="../../Przyroda nieożywiona/indexPrzyrodaNieozywiona.html">Przyroda nieożywiona > </a>
-            <a href="#">Niezbędne do życia ></a>
+            <a href="#">Woda i jej właściwości ></a>
 
         </h6>
         <h2>Przyroda nieożywiona</h2>
-        <h3>🌱💧☀️ Niezbędne do życia</h3>
-        <p class="p" style="text-align: center;"><em>(Необходимо для жизни)</em></p>
+        <h3>💧🌊 Woda i jej właściwości</h3>
+        <p class="p" style="text-align: center;"><em>(Вода и её свойства)</em></p>
         <div class="centr">
-            <h6>🌍 1. Co to znaczy „niezbędne do życia”?</h6>
-            <p><b>Что значит „необходимо для жизни”?</b></p>
-            <p>To coś, bez czego człowiek, zwierzęta i rośliny <b>nie mogą żyć</b> .</p>
-            <p>Чтобы жить, всем существам нужны определённые <b>условия и ресурсы</b>.</p>
+            <h6>💦 1. Co to jest woda?</h6>
+            <p><b>Что такое вода?</b></p>
+            <p>Woda to przezroczysta ciecz, która <b>jest niezbędna do życia</b>.</p>
+            <p>Без воды не может жить ни человек, ни животное, ни растение.</p>
         </div>
         <div>
-            <h6>🧬 2. Co jest niezbędne do życia?</h6>
-            <div class="centr">
-                <p>Что необходимо для жизни?</p>
-                <p><b>✅ Dla ludzi, zwierząt i roślin:</b></p>
-            </div>
+            <h6>🧪 2. Właściwości wody</h6>
+            <p><b>Свойства воды:</b></p>
+            <ul>
+                <li><b>Woda jest bezbarwna</b> - Вода бесцветная</li>
+                <li><b>Woda jest bezwonna</b> - Вода не имеет запаха</li>
+                <li><b>Woda nie ma smaku</b> - Вода безвкусная</li>
+                <li><b>Woda jest cieczą</b> - Вода — это жидкость</li>
+                <li><b>Woda zmienia stan skupienia</b> - Вода может менять своё состояние</li>
+                <li><b>Woda rozpuszcza wiele substancji</b> - Вода растворяет многие вещества</li>
+            </ul>
+        </div>
+        <div>
+            <h6>🔁 3. Stany skupienia wody</h6>
+            <p class="centr"><b>Состояния воды:</b></p>
+            <table style="width: 70%;">
+                <tr>
+                    <th>Stan skupienia</th>
+                    <th>Opis 🇵🇱</th>
+                    <th>Описание 🇷🇺</th>
+                </tr>
+                <tr>
+                    <td>ciecz (woda)</td>
+                    <td>płynie, jak w kranie</td>
+                    <td>жидкость — как вода из-под крана</td>
+                </tr>
+                <tr>
+                    <td>ciało stałe (lód)</td>
+                    <td>zimna, twarda forma wody</td>
+                    <td>твёрдое тело — лёд</td>
+                </tr>
+                <tr>
+                    <td>gaz (para wodna)</td>
+                    <td>gorąca mgła nad czajnikiem</td>
+                    <td>газ — водяной пар</td>
+                </tr>
+            </table>
+
+        </div>
+        <div>
+            <h6>🌍 4. Gdzie znajduje się woda?</h6>
+            <p class="centr"><b>Где находится вода?</b></p>
+            <ul>
+                <li>w rzekach i jeziorach – в реках и озёрах</li>
+                <li>w morzach i oceanach – в морях и океанах</li>
+                <li>w chmurach i deszczu – в облаках и дожде</li>
+                <li>w naszych ciałach – в наших телах (около 70%!)</li>
+            </ul>
+        </div>
+        <div>
+            <h6>💧🌿 5. Do czego potrzebna jest woda?</h6>
+            <p class="centr"><b>Для чего нужна вода?</b></p>
+            <ul>
+                <li>Do picia – для питья</li>
+                <li>Do gotowania – для приготовления еды</li>
+                <li>Do mycia i prania – для мытья и стирки</li>
+                <li>Do podlewania roślin – для полива растений</li>
+                <li>Dla zwierząt i roślin – для жизни животных и растений</li>
+            </ul>
+        </div>
+        <div>
+            <h6>📘 6. Mały słowniczek</h6>
             <div class="two">
                 <div>
-                    <p><span class="playable" data-audio="../audio/woda.mp3">woda</span> - вода
+                    <p><span class="playable" data-audio="../audio/właściwości.mp3">właściwości</span> - свойства
                     </p>
-                    <p><span class="playable" data-audio="../audio/powietrze.mp3">powietrze</span> - воздух
+                    <p><span class="playable" data-audio="../audio/ciecz.mp3">ciecz</span> - жидкость
                     </p>
-                    <p><span class="playable" data-audio="../audio/jedzenie.mp3">jedzenie</span> - еда
+                    <p><span class="playable" data-audio="../audio/lód.mp3">lód</span> - лёд
                     </p>
                 </div>
                 <div>
-                    <p><span class="playable" data-audio="../audio/światło słoneczne.mp3">światło słoneczne</span> -
-                        солнечный свет
+                    <p><span class="playable" data-audio="../audio/para wodna.mp3">para wodna</span> - водяной пар
                     </p>
-                    <p><span class="playable" data-audio="../audio/ciepło.mp3">ciepło</span> - тепло
+                    <p><span class="playable" data-audio="../audio/pić wodę.mp3">pić wodę</span> - пить воду
                     </p>
-                    <p><span class="playable" data-audio="../audio/miejsce do życia.mp3">miejsce do życia</span> - место
-                        для жизни
-                    </p>
-                </div>
-            </div>
-            <div>
-                <h6>🌿 3. Dlaczego to jest ważne?</h6>
-                <p class="centr"><b>Почему это важно?</b></p>
-                <ul>
-                    <li><b>Bez wody</b> organizmy usychają i nie mogą funkcjonować.</li>
-                    <li><b>Bez powietrza</b> nie ma czym oddychać.</li>
-                    <li><b>Bez jedzenia</b> nie ma energii do życia.</li>
-                    <li><b>Słońce</b> daje światło i ciepło — dzięki niemu rośliny rosną.</li>
-                    <li><b>Miejsce do życia</b> (np. las, dom, jezioro) to schronienie i bezpieczeństwo.</li>
-                </ul>
-            </div>
-            <div>
-                <h6>🐾 4. Czy wszystkie istoty potrzebują tego samego?</h6>
-                <p class="centr"><b>Нужны ли всем существам одни и те же вещи?</b></p>
-                <p class="centr">Większość potrzebuje podobnych rzeczy, ale в <b>разных количествах</b>.</p>
-                <ul>
-                    Na przykład:
-                    <li>ryby żyją w wodzie, więc potrzebują czystych jezior i rzek,</li>
-                    <li>ludzie potrzebują domów, ubrań, lekarstw,</li>
-                    <li>rośliny potrzebują ziemi, wody i światła.</li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <h6>📘 5. Mały słowniczek</h6>
-            <div>
-                <div class="centr">
-                    <p><span class="playable" data-audio="../audio/niezbędne.mp3">niezbędne</span> - необходимое
-                    </p>
-                    <p><span class="playable" data-audio="../audio/życie.mp3">życie</span> - жизнь
-                    </p>
-                    <p><span class="playable" data-audio="../audio/powietrze.mp3">powietrze</span> - воздух
-                    </p>
-                    <p><span class="playable" data-audio="../audio/miejsce do życia.mp3">miejsce do życia</span> - место для жизни
+                    <p><span class="playable" data-audio="../audio/podlewać rośliny.mp3">podlewać rośliny</span> - поливать растения
                     </p>
                 </div>
             </div>
         </div>
 
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KoJb-vC_sXI?si=4RBPtPuJ2bxiGcQP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
 
 
-
-        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/przyroda/przyroda-nieozywiona/niezbedne-do-zycia/" target="_blank">
-                Niezbędne do życia ćwieczenie >></a></h4>
+        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/przyroda/przyroda-nieozywiona/woda-i-jej-wlasciwosci/"
+                target="_blank">
+                Woda i jej właściwości ćwieczenie >></a></h4>
 
 
         <!-- Один тег audio, который переиспользуется  -->
