end mineraly i skaly

--- a/przyroda/lekcji/Przyroda nieożywiona/lekcja/lekcja07.html
+++ b/przyroda/lekcji/Przyroda nieożywiona/lekcja/lekcja07.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bogactwa naturalne</title>
+    <title>Skały i minerały</title>
     <link rel="stylesheet" href="../../../../style.css">
     <link rel="stylesheet" href="../../../../styleText.css">
     <link rel="stylesheet" href="../../../../styleTable.css">
@@ -25,135 +25,133 @@
         <h6>
             <a href="../../../indexPrzyroda.html">Przyroda ></a>
             <a href="../../Przyroda nieożywiona/indexPrzyrodaNieozywiona.html">Przyroda nieożywiona > </a>
-            <a href="#">Bogactwa naturalne ></a>
+            <a href="#">Skały i minerały ></a>
 
         </h6>
         <h2>Przyroda nieożywiona</h2>
-        <h3>🌍💎 Bogactwa naturalne</h3>
-        <p class="p" style="text-align: center;"><em>(Природные богатства)</em></p>
+        <h3>🪨💎 Skały i minerały</h3>
+        <p class="p" style="text-align: center;"><em>(Горные породы и минералы)</em></p>
         <div class="centr">
-            <h6>💬 1. Co to są bogactwa naturalne?</h6>
-            <p><b>Что такое природные богатства?</b></p>
-            <p>Bogactwa naturalne to <b>wszystko, co pochodzi z natury </b>i może być używane przez ludzi.</p>
-            <p>Природные богатства — это <b>всё, что даёт природа</b>, и что человек может использовать.</p>
+            <h6>🧱 1. Co to są skały i minerały?</h6>
+            <p><b>Что такое горные породы и минералы?</b></p>
+            <ul>
+                <li><b>Skały</b> – это твёрдые вещества, из которых <b>состоит Земля</b>. <br><em>(Например: гранит, piasek – песок, wapień – известняк)</em></li>
+                <li><b>Minerały </b>– это <b>мелкие кристаллы или вещества</b>, которые входят в состав горных пород<div class="br"><em>(Например: sól – соль, złoto – золото, kwarc – кварц)</em></div></li>
+            </ul>
+            <p class="centr">👉 Минералы – это <b>маленькие части</b>, а из них состоят <b>горные породы</b>.</p>
         </div>
         <div>
-            <h6>🪨🌲💧 2. Rodzaje bogactw naturalnych</h6>
-            <p class="centr"><b>Виды природных богатств:</b></p>
-            <div class="two">
-                <div>
-                    <h6>🌲 1. Surowce odnawialne</h6>
-                    <p><em>(Возобновляемые ресурсы)</em> – можно использовать снова и снова</p>
-                    <ul>
-                        <li>woda 💧 (вода)</li>
-                        <li>drewno 🌲 (дерево)</li>
-                        <li>wiatr 🌬️ (ветер)</li>
-                        <li>słońce ☀️ (солнце)</li>
-                    </ul>
-                </div>
-                <div>
-                    <h6>⛏️ 2. Surowce nieodnawialne</h6>
-                    <p><em>(Невозобновляемые ресурсы)</em> – если их использовать, они закончатся</p>
-                    <ul>
-                        <li>węgiel 🪨 (уголь)</li>
-                        <li>ropa naftowa 🛢️ (нефть)</li>
-                        <li>gaz ziemny 🔥 (природный газ)</li>
-                        <li>rudy metali (металлические руды)</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div>
-            <h6>🧱 3. Do czego używamy bogactw naturalnych?</h6>
-            <p class="centr"><b>Для чего мы используем природные богатства?</b></p>
-            <table style="width: 70%;">
+            <h6>👉 Минералы – это маленькие части, а из них состоят горные породы.</h6>
+            <p class="centr"><b>Примеры горных пород:</b></p>
+            <table>
                 <tr>
-                    <th>🇵🇱 Bogactwo</th>
-                    <th>🇷🇺 Природное богатство</th>
-                    <th>Zastosowanie / Использование</th>
+                    <th>🇵🇱 Польский</th>
+                    <th>🇷🇺 Русский</th>
+                    <th>Zastosowanie / Применение</th>
                 </tr>
                 <tr>
-                    <td>woda</td>
-                    <td>вода</td>
-                    <td>picie, mycie, rośliny</td>
+                    <td>granit</td>
+                    <td>гранит</td>
+                    <td>budowa domów, pomniki</td>
                 </tr>
                 <tr>
-                    <td>drewno</td>
-                    <td>дерево</td>
-                    <td>meble, papier, budowanie</td>
+                    <td>wapień</td>
+                    <td>известняк</td>
+                    <td>cement, budowa</td>
                 </tr>
                 <tr>
-                    <td>węgiel i gaz</td>
-                    <td>уголь и газ</td>
-                    <td>ogrzewanie, prąd</td>
+                    <td>piaskowiec</td>
+                    <td>песчаник</td>
+                    <td>ozdoby, płytki</td>
                 </tr>
                 <tr>
-                    <td>ropa naftowa</td>
-                    <td>нефть</td>
-                    <td>paliwo (бензин, дизель)</td>
-                </tr>
-                <tr>
-                    <td>metale (np. żelazo)</td>
-                    <td>металлы (например, железо)</td>
-                    <td>budowanie, maszyny</td>
+                    <td>bazalt</td>
+                    <td>базальт</td>
+                    <td>drogi, kostka brukowa</td>
                 </tr>
             </table>
         </div>
         <div>
-            <h6>⚠️ 4. Dlaczego trzeba dbać o bogactwa naturalne?</h6>
-            <p class="centr"><b>Почему нужно беречь природные богатства?</b></p>
+            <h6>💎 3. Przykłady minerałów</h6>
+            <p class="centr"><b>Примеры минералов:</b></p>
+            <table style="width: 70%;">
+                <tr>
+                    <th>🇵🇱 Польский</th>
+                    <th>🇷🇺 Русский</th>
+                    <th>Występowanie / Где находится</th>
+                </tr>
+                <tr>
+                    <td>sól</td>
+                    <td>соль</td>
+                    <td>w ziemi, w wodzie morskiej</td>
+                </tr>
+                <tr>
+                    <td>kwarc</td>
+                    <td>кварц</td>
+                    <td>w piasku, w skałach</td>
+                </tr>
+                <tr>
+                    <td>złoto</td>
+                    <td>золото</td>
+                    <td>bardzo rzadko, drogie</td>
+                </tr>
+                <tr>
+                    <td>miedź</td>
+                    <td>медь</td>
+                    <td>w kablach, elektronice</td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <h6>🔍 4. Jak rozpoznać skały i minerały?</h6>
+            <p class="centr"><b>Как отличить горные породы и минералы?</b></p>
             <ul>
-                <li>Niektóre z <b>nich się kończą</b></li>
-                <li>Przy ich wydobyciu <b>niszczy się przyroda</b></li>
-                <li>Dym i odpady <b>zanieczyszczają środowisko</b></li>
+                <li>
+                    Minerały zwykle <b>błyszczą,</b> są twarde <br>
+                    (Минералы часто блестят, твёрдые)
+                </li>
+                <li>
+                    Skały mogą być <b>chropowate</b>, szorstkie <br>
+                    (Породы могут быть шероховатыми)
+                </li>
             </ul>
         </div>
         <div>
-            <h6>✅ 5. Jak chronić bogactwa naturalne?</h6>
-            <p class="centr"><b>Как беречь природные ресурсы?</b></p>
+            <h6>🏗️ 5. Do czego używamy skał i minerałów?</h6>
+            <p class="centr"><b>Для чего нужны горные породы и минералы?</b></p>
             <ul>
-                <li>Oszczędzać wodę i prąd</li>
-                <li>Segregować śmieci ♻️</li>
-                <li>Wybierać energię ze słońca i wiatru</li>
-                <li>Sadzić drzewa 🌳</li>
-                <li>Nie marnować rzeczy</li>
+                <li>do budowania 🧱 (для строительства)</li>
+                <li>do produkcji szkła, cementu, cegieł</li>
+                <li>do robienia ozdób 💍</li>
+                <li>do tworzenia dróg</li>
+                <li>do robienia soli kuchennej 🧂</li>
             </ul>
         </div>
         <div>
-            <h6>📘 7. Mały słowniczek</h6>
-            <div class="two">
-                <div>
-                    <p><span class="playable" data-audio="../audio/bogactwa naturalne.mp3">bogactwa naturalne</span> - природные богатства
-                    </p>
-                    <p><span class="playable" data-audio="../audio/surowce.mp3">surowce</span> - сырьё
-                    </p>
-                    <p><span class="playable" data-audio="../audio/odnawialne.mp3">odnawialne</span> - возобновляемые
-                    </p>
-                     <p><span class="playable" data-audio="../audio/nieodnawialne.mp3">nieodnawialne</span> - невозобновляемые
-                    </p>
-                </div>
-                <div>
-                    <p><span class="playable" data-audio="../audio/węgiel.mp3">węgiel</span> - уголь
-                    </p>
-                    <p><span class="playable" data-audio="../audio/drewno.mp3">drewno</span> - дерево
-                    </p>
-                    <p><span class="playable" data-audio="../audio/ropa naftowa.mp3">ropa naftowa</span> - нефть
-                    </p>
-                    <p><span class="playable" data-audio="../audio/ochrona środowiska.mp3">ochrona środowiska</span> - охрана окружающей среды
-                    </p>
-                </div>
-            </div>
+            <h6>⚒️ 6. Gdzie się je wydobywa?</h6>
+            <ul>
+                <b>Где их добывают?</b>
+                <ul>
+                    <li>w kopalniach (в шахтах)</li>
+                    <li>w kamieniołomach (в карьерах)</li>
+                </ul>
+            </ul>
         </div>
-
+        <div class="prezent">
+            <iframe style="max-width:100%" src="https://wordwall.net/ru/embed/8e7b6f6311c1410eab2057686c5693a0?themeId=48&templateId=38&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+        </div>
 
         <div class="video">
-            <iframe title="vimeo-player" src="https://player.vimeo.com/video/288381080?h=5613f2de07" width="640" height="360" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"   allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dKAEbeDT5VI?si=kLuhCBFxpdSc-D7l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OUFtMWi6MnY?si=ODt2CgXDW5N2rAN1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
 
-        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/przyroda/przyroda-nieozywiona/bogactwa-naturalne/"
+        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/przyroda/przyroda-nieozywiona/skaly-i-mineraly/"
                 target="_blank">
-                Bogactwa naturalne ćwieczenie >></a></h4>
+                Skały i minerały ćwieczenie >></a></h4>
 
 
         <!-- Один тег audio, который переиспользуется  -->
