end Regiony Polski

--- a/przyroda/lekcji/Polska/indexPolska.html
+++ b/przyroda/lekcji/Polska/indexPolska.html
@@ -21,32 +21,32 @@
     </header>
     <main class="wrapper">
         <h6>
-               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="#">Polska</a>
+               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="#">Przyroda nieożywiona</a>
         </h6>
-        <h2>Polska</h2>
+        <h2>Przyroda nieożywiona</h2>
         <div>
-            <ul class="ulHome">
+             <ul class="ulHome">
                 <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img1.png"
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
                             src="./image/img2.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
                             src="./image/img3.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Człowiek/indexCzlowiek.html" class="zagolowok"><img src="./image/img4.png"
-                            alt=""></a>
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img
+                            src="./image/img4.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/ Ekologia/indexEkologia.html" class="zagolowok"><img src="./image/img5.png"
-                            alt=""></a>
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img
+                            src="./image/img5.png" alt=""></a>
                 </div>
-            </ul>
+            </ul>            
         </div>
     </main>
 </body>
