end Parki Polscy

--- a/przyroda/lekcji/Polska/lekcja/lekcja01.html
+++ b/przyroda/lekcji/Polska/lekcja/lekcja01.html
@@ -24,11 +24,11 @@
     <main class="wraper">
         <h6>
             <a href="../../../indexPrzyroda.html">Przyroda ></a>
-            <a href="../../Przyroda nieożywiona/indexPrzyrodaNieozywiona.html">Przyroda nieożywiona > </a>
+            <a href="../../Polska/indexPolska.html">Polska > </a>
             <a href="#">Regiony Polski ></a>
 
         </h6>
-        <h2>Przyroda nieożywiona</h2>
+        <h2>🇵🇱  Polska</h2>
         <h3>🗺️ Regiony Polski</h3>
         <p class="p" style="text-align: center;"><em>(Регионы Польши)</em></p>
         <div>
