--- a/przyroda/lekcji/Świat i wszechświat/indexSwiatWszech.html
+++ b/przyroda/lekcji/Świat i wszechświat/indexSwiatWszech.html
@@ -21,17 +21,40 @@
     </header>
     <main class="wrapper">
         <h6>
-               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="#">Świat i wszechświat</a>
+               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="../Świat i wszechświat/indexSwiatWszech.html">Świat i wszechświat</a>
         </h6>
         <h2>Świat i wszechświat</h2>
         <div>
-            <ul >
-               <Li><a href="">- Znaki interpunkcyjne na końcu zdania</a></Li>
-               <Li><a href="">- Przecinek</a></Li>
-               <Li><a href="">- Dwukropek</a></Li>
-               <Li><a href="">- Cudzysłów</a></Li>
-            </ul>
-            
+             <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img
+                            src="./image/img4.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img
+                            src="./image/img5.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja06.html" class="zagolowok"><img
+                            src="./image/img6.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja07.html" class="zagolowok"><img
+                            src="./image/img7.png" alt=""></a>
+                </div>
+            </ul>            
         </div>
     </main>
 </body>
