--- a/przyroda/lekcji/Mapa/indexMapa.html
+++ b/przyroda/lekcji/Mapa/indexMapa.html
@@ -21,24 +21,24 @@
     </header>
     <main class="wrapper">
         <h6>
-               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="#">Mapa</a>
+               <a href="../../indexPrzyroda.html">Przyroda > </a> <a href="../Mapa/indexMapa.html">Mapa</a>
         </h6>
         <h2>Mapa</h2>
         <div>
-            <ul class="ulHome">
+             <ul class="ulHome">
                 <div>
-                    <a href="./lekcji/pory_roku/indexPoryRoku.html" class="zagolowok"><img src="./image/img1.png"
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
                             alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Świat zwierząt/indexSwiatZwierząt.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
                             src="./image/img2.png" alt=""></a>
                 </div>
                 <div>
-                    <a href="./lekcji/Swiat roślin/indexSwiatRoslin.html" class="zagolowok"><img
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
                             src="./image/img3.png" alt=""></a>
                 </div>
-            </ul>
+            </ul>            
         </div>
     </main>
 </body>
