--- a/matematyka/lekcji/Figury/indexFigury.html
+++ b/matematyka/lekcji/Figury/indexFigury.html
@@ -25,13 +25,28 @@
         </h6>
         <h2>Figury</h2>
         <div>
-            <ul >
-               <Li><a href="">- Kwadrat</a></Li>
-               <Li><a href="">- Trójkąt</a></Li>
-               <Li><a href="">- Prostokąt</a></Li>
-               <Li><a href="">- Odcinek</a></Li>
-            </ul>
-            
+            <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja04.html" class="zagolowok"><img src="./image/img4.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja05.html" class="zagolowok"><img src="./image/img5.png"
+                            alt=""></a>
+                </div>
+            </ul> 
         </div>
     </main>
 </body>
