--- a/matematyka/lekcji/Figury/lekcja/lekcja01.html
+++ b/matematyka/lekcji/Figury/lekcja/lekcja01.html
@@ -87,6 +87,14 @@
                 </div>
             </div>
         </div>
+        <div>
+            <h6>💡 Ciekawostka!</h6>
+            <ul>
+                <li>Kwadrat jest bardzo ważną figurą w matematyce i sztuce.</li>
+                <li>Ma tyle samo cech prostokąta i rombu!</li>
+                <li>Kwadraty można łączyć, tworząc różne wzory i mozaiki.</li>
+            </ul>
+        </div>
 
 
         <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/matematyka/figury/kwadrat/"
