--- a/matematyka/lekcji/Figury/lekcja/lekcja02.html
+++ b/matematyka/lekcji/Figury/lekcja/lekcja02.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kwadrat</title>
+    <title>Trójkąt</title>
     <link rel="stylesheet" href="../../../../style.css">
     <link rel="stylesheet" href="../../../../styleText.css">
 </head>
@@ -25,72 +25,80 @@
         <h6>
             <a href="../../../indexMatematyka.html">Matematyka ></a>
             <a href="../../Figury/indexFigury.html">Figury > </a>
-            <a href="#">Kwadrat ></a>
+            <a href="#">Trójkąt ></a>
 
         </h6>
         <h2>Figury</h2>
-        <h3>⬜ Kwadrat</h3>
-        <p class="p" style="text-align: center;"><em>(Квадрат — poznaj figurę geometryczną)</em></p>
+        <h3>🔺 Trójkąt</h3>
+        <p class="p" style="text-align: center;"><em>(Треугольник — poznaj figurę geometryczną)</em></p>
         <div>
-            <h6>📍 Co to jest kwadrat?</h6>
+            <h6>📍 Co to jest trójkąt?</h6>
             <ul>
-                <b>Что такое квадрат?</b>
+                <b>Что такое треугольник?</b>
                 <ul>
-                    <li>Kwadrat to figura geometryczna o czterech równych bokach.</li>
-                    <li>Wszystkie kąty w kwadracie są proste, czyli mają 90 stopni.</li>
-                    <li>Kwadrat jest rodzajem prostokąta i rombu jednocześnie.</li>
+                    <li>Trójkąt to figura geometryczna, która ma trzy boki i trzy kąty.</li>
+                    <li>To jedna z podstawowych figur w matematyce.</li>
                 </ul>
             </ul>
         </div>
         <div>
-            <h6>✏️ Cechy kwadratu</h6>
-            <p><b>Характеристики квадрата</b></p>
+            <h6>✏️ Cechy trójkąta</h6>
+            <p><b>Характеристики треугольника</b></p>
             <ul>
-                <li>Cztery boki mają taką samą długość.</li>
-                <li>Cztery kąty proste (90°).</li>
-                <li>Przekątne są równe i przecinają się pod kątem prostym.</li>
-                <li>Kwadrat ma cztery wierzchołki (rogi).</li>
+                <li>Ma trzy boki — każdy może mieć inną długość.</li>
+                <li>Ma trzy kąty — suma wszystkich kątów zawsze wynosi 180 stopni.</li>
+                <li>Ma trzy wierzchołki (rogi).</li>
             </ul>
         </div>
         <div>
-            <h6>📐 Jak narysować kwadrat?</h6>
-            <p><b>Как нарисовать квадрат?</b></p>
+            <h6>📐 Rodzaje trójkątów</h6>
             <ul>
-                <li>Narysuj linię o dowolnej długości — to będzie pierwszy bok.</li>
-                <li>Pod kątem prostym narysuj drugi bok o takiej samej długości.</li>
-                <li>Powtórz te kroki, aby narysować wszystkie cztery boki.</li>
-                <li>Połącz końce, aby zamknąć figurę.</li>
+                <b>Виды треугольников</b>
+                <li><b>Trójkąt równoboczny</b> — wszystkie boki i kąty są równe (każdy kąt ma 60°).</li>
+                <li><b>Trójkąt równoramienny</b> — dwa boki mają tę samą długość, a dwa kąty są równe.</li>
+                <li><b>Trójkąt różnoboczny</b> — wszystkie boki i kąty mają różne długości i miary.</li>
             </ul>
         </div>
         <div>
-            <h6>🧩 Gdzie widzimy kwadraty?</h6>
-            <p><b>Где мы видим квадраты?</b></p>
+            <h6>🧩 Jak narysować trójkąt?</h6>
             <ul>
-                <li>Na planszy do gry w szachy lub warcaby.</li>
-                <li>Na tabliczkach czekolady.</li>
-                <li>W oknach, kafelkach na ścianie.</li>
-                <li>W wielu przedmiotach codziennego użytku.
-
-                </li>
+                <li>Narysuj linię — to będzie pierwszy bok.</li>
+                <li>Narysuj drugi bok łączący się z końcem pierwszego.</li>
+                <li>Połącz końce obu boków trzecim bokiem, aby zamknąć figurę.</li>
             </ul>
         </div>
+       
         <div>
             <h6>📘 Słowniczek</h6>
-            <div>
+            <div class="two">
                 <div>
-                    <p><span class="playable" data-audio="../audio/kąt.mp3">kąt</span> - угол
+                    <p><span class="playable" data-audio="../audio/trójkąt.mp3">trójkąt</span> - треугольник
                     </p>
                     <p><span class="playable" data-audio="../audio/wierzchołek.mp3">wierzchołek</span> - вершина (угол фигуры)
                     </p>
-                    <p><span class="playable" data-audio="../audio/przekątna.mp3">przekątna</span> - диагональ
+                </div>
+                <div>
+                    <p><span class="playable" data-audio="../audio/równoboczny.mp3">równoboczny</span> - равносторонний
+                    </p>
+                     <p><span class="playable" data-audio="../audio/równoramienny.mp3">równoramienny</span> - равнобедренный
+                    </p>
+                     <p><span class="playable" data-audio="../audio/różnoboczny.mp3">różnoboczny</span> - разносторонний
                     </p>
                 </div>
             </div>
         </div>
+        <div>
+            <h6>💡 Ciekawostka!</h6>
+            <ul>
+                <li>Suma kątów w każdym trójkącie zawsze wynosi 180°.</li>
+                <li>Trójkąty są bardzo ważne w budownictwie i architekturze.</li>
+                <li>Można tworzyć z nich różne wzory i mozaiki.</li>
+            </ul>
+        </div>
 
 
-        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/matematyka/figury/kwadrat/"
-                target="_blank">Kwadrat człowieka >></a></h4>
+        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/matematyka/figury/trojkat/"
+                target="_blank">Trójkąt człowieka >></a></h4>
         <!-- Один тег audio, который переиспользуется  -->
         <audio id="player"></audio>
     </main>
