--- a/matematyka/lekcji/Figury/lekcja/lekcja04.html
+++ b/matematyka/lekcji/Figury/lekcja/lekcja04.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prostokąt</title>
+    <title>Odcinek</title>
     <link rel="stylesheet" href="../../../../style.css">
     <link rel="stylesheet" href="../../../../styleText.css">
 </head>
@@ -25,47 +25,45 @@
         <h6>
             <a href="../../../indexMatematyka.html">Matematyka ></a>
             <a href="../../Figury/indexFigury.html">Figury > </a>
-            <a href="#">Prostokąt ></a>
+            <a href="#">Odcinek ></a>
 
         </h6>
         <h2>Figury</h2>
-        <h3>▭ Prostokąt</h3>
-        <p class="p" style="text-align: center;"><em>(Прямоугольник — poznaj figurę geometryczną)</em></p>
+        <h3>📏 Odcinek</h3>
+        <p class="p" style="text-align: center;"><em>(Отрезок — poznaj podstawowy element geometryczny)</em></p>
         <div>
-            <h6>📍 Co to jest prostokąt?</h6>
+            <h6>📍 Co to jest odcinek?</h6>
             <ul>
-                <b>Что такое прямоугольник?</b>
+                <b>Что такое отрезок?</b>
                 <ul>
-                    <li>Prostokąt to figura geometryczna, która ma cztery boki.</li>
-                    <li>Przeciwległe boki są równe i mają taką samą długość.</li>
-                    <li>Wszystkie kąty w prostokącie są proste — mają 90 stopni.</li>
+                    <li>Odcinek to część prostej, która ma dwa końce.</li>
+                    <li>Ma określoną długość.</li>
+                    <li>Można go zmierzyć linijką.</li>
                 </ul>
             </ul>
         </div>
         <div>
-            <h6>✏️ Cechy prostokąta</h6>
-            <p><b>Характеристики прямоугольника</b></p>
+            <h6>✏️ Cechy odcinka</h6>
+            <p><b>Характеристики отрезка</b></p>
             <ul>
-                <li>Cztery kąty proste (90°).</li>
-                <li>Dwa dłuższe boki i dwa krótsze, przeciwległe do siebie.</li>
-                <li>Przekątne są równe i przecinają się w połowie.</li>
+                <li>Ma początek i koniec — dwa punkty końcowe.</li>
+                <li>Jest prosty — nie jest zakrzywiony.</li>
+                <li>Ma określoną długość, którą można zmierzyć.</li>
             </ul>
         </div>
         <div>
-            <h6>📐 Jak narysować prostokąt?</h6>
+            <h6>📐 Jak narysować odcinek?</h6>
             <ul>
-                <li>Narysuj dłuższy bok.</li>
-                <li>Pod kątem prostym narysuj krótszy bok.</li>
-                <li>Powtórz te kroki, aby narysować wszystkie cztery boki.</li>
-                <li>Połącz końce, aby zamknąć figurę.</li>
+                <li>Zaznacz dwa punkty na kartce.</li>
+                <li>Połącz je prostą linią — to jest odcinek.</li>
             </ul>
         </div>
         <div>
-            <h6>🧩 Gdzie widzimy prostokąty?</h6>
+            <h6>🧩 Gdzie widzimy odcinki?</h6>
             <ul>
-                <li>W drzwiach i oknach.</li>
-                <li>W książkach i zeszytach.</li>
-                <li>Na ekranach komputerów i telewizorów.</li>
+                <li>Krawędzie książki lub zeszytu.</li>
+                <li>Linie na drodze lub boisku.</li>
+                <li>Linie na rysunkach i w figurach geometrycznych.</li>
             </ul>
         </div>
        
@@ -73,9 +71,15 @@
             <h6>📘 Słowniczek</h6>
             <div class="two">
                 <div>
-                    <p><span class="playable" data-audio="../audio/prostokąt.mp3">prostokąt</span> - прямоугольник
+                    <p><span class="playable" data-audio="../audio/odcinek.mp3">odcinek</span> - отрезок
                     </p>
-                    <p><span class="playable" data-audio="../audio/przekątna.mp3">przekątna</span> - диагональ
+                    <p><span class="playable" data-audio="../audio/punkt.mp3">punkt</span> - точка
+                    </p>
+                </div>
+                <div>
+                    <p><span class="playable" data-audio="../audio/długość.mp3">długość</span> - длина
+                    </p>
+                    <p><span class="playable" data-audio="../audio/linijka.mp3">linijka</span> - линейка
                     </p>
                 </div>
             </div>
@@ -83,17 +87,15 @@
         <div>
             <h6>💡 Ciekawostka!</h6>
             <ul>
-                <li>Prostokąt jest bardzo często spotykaną figurą w życiu codziennym.</li>
-                <li>Każdy kwadrat jest prostokątem, ale nie każdy prostokąt jest kwadratem!</li>
+                <li>Odcinek jest podstawą do rysowania innych figur geometrycznych.</li>
+                <li>Można go mierzyć i dzielić na mniejsze części.</li>
             </ul>
         </div>
-        <div class="prezent">
-            <iframe src="https://1drv.ms/p/c/53bd6a3ee8a255fe/IQQJ26Oz0TQxRYEdBBDamALkAQIvPffV8rLBoFXoY10RiFM" width="402" height="327" frameborder="0" scrolling="no"></iframe>
-        </div>
+        
 
 
-        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/matematyka/figury/prostokat/"
-                target="_blank">Prostokąt człowieka >></a></h4>
+        <h4><a href="https://www.eduelo.pl/quizy/poziom-iii/matematyka/figury/odcinek/"
+                target="_blank">Odcinek człowieka >></a></h4>
         <!-- Один тег audio, который переиспользуется  -->
         <audio id="player"></audio>
     </main>
