--- a/matematyka/lekcji/Wagi i miary/indexWagi.html
+++ b/matematyka/lekcji/Wagi i miary/indexWagi.html
@@ -25,12 +25,20 @@
         </h6>
         <h2>Wagi i miary</h2>
         <div>
-            <ul >
-               <Li><a href="">- Waga</a></Li>
-               <Li><a href="">- Pojemność</a></Li>
-               <Li><a href="">- Długość</a></Li>
-            </ul>
-            
+            <ul class="ulHome">
+                <div>
+                    <a href="./lekcja/lekcja01.html" class="zagolowok"><img src="./image/img1.png"
+                            alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja02.html" class="zagolowok"><img
+                            src="./image/img2.png" alt=""></a>
+                </div>
+                <div>
+                    <a href="./lekcja/lekcja03.html" class="zagolowok"><img
+                            src="./image/img3.png" alt=""></a>
+                </div>
+            </ul> 
         </div>
     </main>
 </body>
